UPdates to reg and homepage

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,7 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-
-
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -22,7 +20,7 @@
             android:id="@+id/TextViewUsername"
             android:layout_column="0"
             android:layout_columnWeight="0"
-            android:layout_marginTop="20dp"
+            android:layout_marginTop="20sp"
             android:layout_row="0"
             android:background="#ffffff"
             android:text="@string/username"
@@ -33,7 +31,7 @@
             android:id="@+id/TextViewPassword"
             android:layout_column="0"
             android:layout_columnWeight="0"
-            android:layout_marginTop="20dp"
+            android:layout_marginTop="20sp"
             android:layout_row="1"
             android:background="#ffffff"
             android:text="@string/password"
@@ -45,7 +43,7 @@
             android:id="@+id/EditTextUsername"
             android:layout_column="1"
             android:layout_columnWeight="0"
-            android:layout_marginTop="20dp"
+            android:layout_marginTop="20sp"
             android:layout_row="0"
             android:background="#ffffff"
             android:hint="@string/usernameLog"
@@ -56,7 +54,7 @@
             android:id="@+id/EditTextPassword"
             android:layout_column="1"
             android:layout_columnWeight="0"
-            android:layout_marginTop="20dp"
+            android:layout_marginTop="20sp"
             android:layout_row="1"
             android:background="#ffffff"
             android:hint="@string/passMin"
@@ -68,9 +66,9 @@
         <Button
             android:id="@+id/ButtonLogin"
             android:layout_columnSpan="2"
-            android:layout_marginTop="20dp"
+            android:layout_marginTop="20sp"
             android:layout_row="3"
-            android:background="#00e232"
+            android:background="#65aef1"
             android:text="Login"
             android:textColor="#ffffff"
             android:textSize="25sp" />
@@ -80,9 +78,9 @@
             android:layout_width="match_parent"
             android:layout_column="0"
             android:layout_columnSpan="2"
-            android:layout_marginLeft="20dp"
-            android:layout_marginRight="20dp"
-            android:layout_marginTop="20dp"
+            android:layout_marginLeft="20sp"
+            android:layout_marginRight="20sp"
+            android:layout_marginTop="20sp"
             android:layout_row="9"
             android:background="#ff0000"
             android:text="Create New Account"
