--- a/app/src/main/res/layout/activity_register_user.xml
+++ b/app/src/main/res/layout/activity_register_user.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:background="@drawable/marker3"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -19,7 +20,7 @@
             android:id="@+id/TextViewNumber2"
             android:layout_column="0"
             android:layout_columnWeight="0"
-            android:layout_marginTop="20dp"
+            android:layout_marginTop="20sp"
             android:layout_row="0"
             android:text="@string/number"
             android:textSize="25sp"
@@ -30,7 +31,7 @@
             android:id="@+id/EditTextNumber2"
             android:layout_column="1"
             android:layout_columnWeight="0"
-            android:layout_marginTop="20dp"
+            android:layout_marginTop="20sp"
             android:layout_row="0"
             android:hint="@string/numberMin"
             android:inputType="number"
@@ -42,7 +43,7 @@
             android:id="@+id/TextViewUsername2"
             android:layout_column="0"
             android:layout_columnWeight="0"
-            android:layout_marginTop="20dp"
+            android:layout_marginTop="20sp"
             android:layout_row="1"
             android:text="@string/username"
             android:textSize="25sp"
@@ -53,7 +54,7 @@
             android:id="@+id/EditTextUsername2"
             android:layout_column="1"
             android:layout_columnWeight="0"
-            android:layout_marginTop="20dp"
+            android:layout_marginTop="20sp"
             android:hint="@string/usernameHint"
             android:layout_row="1"
             android:textSize="25sp"
@@ -65,7 +66,7 @@
             android:id="@+id/TextViewPassword2"
             android:layout_column="0"
             android:layout_columnWeight="0"
-            android:layout_marginTop="20dp"
+            android:layout_marginTop="20sp"
             android:layout_row="2"
             android:text="@string/password"
             android:textSize="25sp"
@@ -77,7 +78,7 @@
             android:id="@+id/EditTextPassword2"
             android:layout_column="1"
             android:layout_columnWeight="0"
-            android:layout_marginTop="20dp"
+            android:layout_marginTop="20sp"
             android:layout_row="2"
             android:hint="@string/passMin"
             android:inputType="textPassword"
@@ -89,7 +90,7 @@
             android:id="@+id/TextViewConfirmPassword"
             android:layout_column="0"
             android:layout_columnWeight="0"
-            android:layout_marginTop="20dp"
+            android:layout_marginTop="20sp"
             android:layout_row="3"
             android:layout_rowSpan="2"
             android:text="@string/confirm"
@@ -102,13 +103,27 @@
             android:id="@+id/EditTextConfirmPassword"
             android:layout_column="1"
             android:layout_columnWeight="0"
-            android:layout_marginTop="20dp"
+            android:layout_marginTop="20sp"
             android:layout_row="3"
             android:hint="@string/retype"
             android:inputType="textPassword"
             android:textSize="25sp"
             android:background="#ffffff"
             android:textColor="#000000"/>
+
+        <Button
+            android:id="@+id/ButtonRegister"
+            android:layout_width="match_parent"
+            android:layout_column="0"
+            android:layout_columnSpan="2"
+            android:layout_marginLeft="20sp"
+            android:layout_marginRight="20sp"
+            android:layout_marginTop="20sp"
+            android:layout_row="7"
+            android:background="#65aef1"
+            android:text="Register"
+            android:textColor="#ffffff"
+            android:textSize="25sp" />
     </GridLayout>
 
 
