--- a/app/src/main/res/layout/activity_register_user.xml
+++ b/app/src/main/res/layout/activity_register_user.xml
@@ -17,30 +17,28 @@
         android:rowCount="10">
 
         <TextView
-            android:id="@+id/TextViewNumber2"
             android:layout_column="0"
             android:layout_columnWeight="0"
             android:layout_marginTop="20sp"
             android:layout_row="0"
-            android:text="@string/number"
+            android:text="@string/email"
             android:textSize="25sp"
             android:background="#ffffff"
             android:textColor="#000000"/>
 
         <EditText
-            android:id="@+id/EditTextNumber2"
+            android:id="@+id/EditTextEmail"
             android:layout_column="1"
             android:layout_columnWeight="0"
             android:layout_marginTop="20sp"
             android:layout_row="0"
-            android:hint="@string/numberMin"
-            android:inputType="number"
+            android:hint="@string/emailHint"
+            android:inputType="textEmailAddress"
             android:textSize="25sp"
             android:background="#ffffff"
             android:textColor="#000000"/>
 
         <TextView
-            android:id="@+id/TextViewUsername2"
             android:layout_column="0"
             android:layout_columnWeight="0"
             android:layout_marginTop="20sp"
@@ -63,7 +61,6 @@
 
 
         <TextView
-            android:id="@+id/TextViewPassword2"
             android:layout_column="0"
             android:layout_columnWeight="0"
             android:layout_marginTop="20sp"
@@ -87,12 +84,12 @@
             android:textColor="#000000"/>
 
         <TextView
-            android:id="@+id/TextViewConfirmPassword"
             android:layout_column="0"
             android:layout_columnWeight="0"
             android:layout_marginTop="20sp"
             android:layout_row="3"
             android:layout_rowSpan="2"
+            android:paddingRight="20sp"
             android:text="@string/confirm"
             android:textSize="25sp"
             android:background="#ffffff"
@@ -112,7 +109,7 @@
             android:textColor="#000000"/>
 
         <Button
-            android:id="@+id/ButtonRegister"
+            android:id="@+id/registerButtonRegister"
             android:layout_width="match_parent"
             android:layout_column="0"
             android:layout_columnSpan="2"
