--- a/app/src/main/res/menu/menu.xml
+++ b/app/src/main/res/menu/menu.xml
@@ -1,10 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
-    <item android:id="@+id/contacts"
+    <item
+        android:id="@+id/contacts"
         android:title="contacts"
         app:showAsAction="never"/>
-    <item android:id="@+id/settings"
+    <item
+        android:id="@+id/settings"
         android:title="settings"
         app:showAsAction="never"/>
+
 </menu>
