--- a/app/src/main/res/menu/menu.xml
+++ b/app/src/main/res/menu/menu.xml
@@ -9,5 +9,9 @@
         android:id="@+id/settings"
         android:title="settings"
         app:showAsAction="never"/>
+    <item
+        android:id="@+id/requests"
+        android:title="Manage Requests"
+        app:showAsAction="never"/>
 
 </menu>
