Location service working, Map padding added

--- a/app/src/main/res/layout/activity_login_success.xml
+++ b/app/src/main/res/layout/activity_login_success.xml
@@ -33,6 +33,8 @@
         android:title="WhereYouAt"
         android:layout_width="match_parent"
         android:layout_height="56dp"
-        android:background="@android:color/holo_blue_bright" />
+        android:background="@android:color/holo_blue_bright"
+        tools:layout_editor_absoluteY="0dp"
+        tools:layout_editor_absoluteX="8dp" />
 
 </android.support.constraint.ConstraintLayout>
