json file changed  and auth working for  registration. Email instead of username

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -23,7 +23,7 @@
             android:layout_marginTop="20sp"
             android:layout_row="0"
             android:background="#ffffff"
-            android:text="@string/username"
+            android:text="@string/email"
             android:textColor="#000000"
             android:textSize="25sp" />
 
