--- a/app/src/main/res/layout/activity_register_user.xml
+++ b/app/src/main/res/layout/activity_register_user.xml
@@ -49,13 +49,14 @@
             android:textColor="#000000"/>
 
         <EditText
-            android:id="@+id/EditTextUsername2"
+            android:id="@+id/EditPhoneNumber"
             android:layout_column="1"
             android:layout_columnWeight="0"
             android:layout_marginTop="20sp"
             android:hint="@string/usernameHint"
             android:layout_row="1"
             android:textSize="25sp"
+            android:inputType="phone"
             android:background="#ffffff"
             android:textColor="#000000"/>
 
