--- a/app/src/main/res/layout/activity_register_user.xml
+++ b/app/src/main/res/layout/activity_register_user.xml
@@ -60,12 +60,34 @@
             android:background="#ffffff"
             android:textColor="#000000"/>
 
-
         <TextView
             android:layout_column="0"
             android:layout_columnWeight="0"
             android:layout_marginTop="20sp"
             android:layout_row="2"
+            android:text="Username"
+            android:textSize="25sp"
+            android:background="#ffffff"
+            android:textColor="#000000"/>
+
+
+        <EditText
+            android:id="@+id/EditTextUsername2"
+            android:layout_column="1"
+            android:layout_columnWeight="0"
+            android:layout_marginTop="20sp"
+            android:layout_row="2"
+            android:hint="No Special Chars"
+            android:inputType="text"
+            android:textSize="25sp"
+            android:background="#ffffff"
+            android:textColor="#000000"/>
+
+        <TextView
+            android:layout_column="0"
+            android:layout_columnWeight="0"
+            android:layout_marginTop="20sp"
+            android:layout_row="3"
             android:text="@string/password"
             android:textSize="25sp"
             android:background="#ffffff"
@@ -77,7 +99,7 @@
             android:layout_column="1"
             android:layout_columnWeight="0"
             android:layout_marginTop="20sp"
-            android:layout_row="2"
+            android:layout_row="3"
             android:hint="@string/passMin"
             android:inputType="textPassword"
             android:textSize="25sp"
@@ -88,7 +110,7 @@
             android:layout_column="0"
             android:layout_columnWeight="0"
             android:layout_marginTop="20sp"
-            android:layout_row="3"
+            android:layout_row="4"
             android:layout_rowSpan="2"
             android:paddingRight="20sp"
             android:text="@string/confirm"
@@ -102,7 +124,7 @@
             android:layout_column="1"
             android:layout_columnWeight="0"
             android:layout_marginTop="20sp"
-            android:layout_row="3"
+            android:layout_row="4"
             android:hint="@string/retype"
             android:inputType="textPassword"
             android:textSize="25sp"
@@ -117,7 +139,7 @@
             android:layout_marginLeft="20sp"
             android:layout_marginRight="20sp"
             android:layout_marginTop="20sp"
-            android:layout_row="7"
+            android:layout_row="8"
             android:background="#65aef1"
             android:text="Register"
             android:textColor="#ffffff"
