Reworked Manifest Merge

--- a/app/src/main/res/layout/activity_contacts.xml
+++ b/app/src/main/res/layout/activity_contacts.xml
@@ -5,10 +5,15 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="edu.uco.tlawyer.whereyouat.ContactsActivity">
-
+    <Button
+        android:id="@+id/contactButton"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Add Contact"/>
     <ListView
         android:id="@+id/contactList"
         android:layout_width="0dp"
         android:layout_height="match_parent"
-        android:layout_weight="1"/>
+        android:layout_weight="1"
+        app:layout_constraintTop_toBottomOf="@+id/contactButton"/>
 </android.support.constraint.ConstraintLayout>
