--- a/app/src/main/res/menu/menu.xml
+++ b/app/src/main/res/menu/menu.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
         android:id="@+id/contacts"
-        android:title="contacts"
+        android:title="Contacts"
         app:showAsAction="never"/>
     <item
         android:id="@+id/requests"
@@ -11,7 +11,7 @@
         app:showAsAction="never"/>
     <item
         android:id="@+id/settings"
-        android:title="settings"
+        android:title="Settings"
         app:showAsAction="never"/>
 
 </menu>
