--- a/app/src/main/res/layout/activity_register_user.xml
+++ b/app/src/main/res/layout/activity_register_user.xml
@@ -25,6 +25,13 @@
             android:textColor="#ffffff"
             android:textSize="25sp" />
 
+        <LinearLayout
+
+            android:layout_column="1"
+            android:layout_columnWeight="0"
+            android:layout_row="0"
+            android:orientation="horizontal">
+
         <EditText
             android:id="@+id/EditTextEmail"
             android:layout_column="1"
@@ -35,7 +42,20 @@
             android:inputType="textEmailAddress"
             android:textColor="#ffffff"
             android:textColorHint="#ffffff"
-            android:textSize="25sp" />
+            android:textSize="22sp"
+            android:layout_height="wrap_content"
+            android:layout_width="wrap_content" />
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_column="1"
+                android:textColor="#ffffff"
+                android:layout_gravity="end"
+                android:gravity="bottom"
+                android:text="@string/gmail"
+                android:textSize="18sp" />
+        </LinearLayout>
 
         <TextView
             android:layout_column="0"
