--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -17,28 +17,30 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="1.0"
+        app:layout_constraintVertical_bias="0.0"
         tools:layout_constraintBottom_creator="1"
         tools:layout_constraintLeft_creator="1"
         tools:layout_constraintRight_creator="1"
-        tools:layout_constraintTop_creator="1"
-        app:layout_constraintHorizontal_bias="0.0">
+        tools:layout_constraintTop_creator="1">
 
         <Button
             android:id="@+id/picture"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Set Profile Picture"
+            android:layout_centerHorizontal="true"
+            android:layout_centerVertical="true"
+            android:layout_alignStart="@+id/reset"
             android:layout_below="@+id/reset"
-            android:layout_alignStart="@+id/reset" />
+            android:text="Set Profile Picture" />
 
         <Button
             android:id="@+id/reset"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_centerHorizontal="true"
-            android:layout_marginTop="20dp"
-            android:text="Reset Password" />
+            android:layout_marginTop="27dp"
+            android:text="Reset Password"
+            android:layout_alignParentTop="true"
+            android:layout_centerHorizontal="true" />
 
         <Button
             android:id="@+id/signOut"
@@ -52,10 +54,10 @@
             android:id="@+id/settingSupport"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Contact Support"
-            android:layout_below="@+id/signOut"
             android:layout_centerHorizontal="true"
-            android:layout_marginTop="80dp" />
+            android:layout_centerVertical="true"
+            android:layout_below="@id/signOut"
+            android:text="Contact Support" />
     </RelativeLayout>
 
 </android.support.constraint.ConstraintLayout>
